# next-plaid

./: Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: python-sdk-release.yml
colgrep/: README.md
colgrep/src/: cli.rs  config.rs  lib.rs  main.rs
colgrep/src/commands/: config.rs
colgrep/src/parser/: analysis.rs  extract.rs  html.rs  mod.rs  svelte.rs  vue.rs
colgrep/src/parser/tests/: mod.rs  test_recursion_guard.rs
next-plaid-api/: Cargo.toml  Dockerfile  README.md
next-plaid-api/src/: error.rs  main.rs  models.rs  state.rs
next-plaid-api/src/handlers/: documents.rs  mod.rs  search.rs
next-plaid-api/tests/: integration_tests.rs
