[workspace]
members = ["next-plaid", "next-plaid-api"]
resolver = "2"

[workspace.package]
version = "1.0.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/meetdoshi90/next-plaid"
homepage = "https://github.com/meetdoshi90/next-plaid"
authors = ["Raphael Sourty, Meet Doshi"]
documentation = "https://docs.rs/next-plaid"

[workspace.dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3